--- a/LibMecabSample/TokensViewController.xib
+++ b/LibMecabSample/TokensViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TokensViewController">
@@ -10,7 +10,8 @@
                 <outlet property="editButton" destination="c7k-Tz-adt" id="95k-3b-0u8"/>
                 <outlet property="myNavigationBar" destination="qBN-sD-CeZ" id="dfO-Vx-AJW"/>
                 <outlet property="myNavigationItem" destination="eJH-Xk-LN4" id="kkn-L3-Mc9"/>
-                <outlet property="tableView_" destination="11" id="12"/>
+                <outlet property="searchBar" destination="fug-7N-gtN" id="zFT-ub-EWd"/>
+                <outlet property="tableView" destination="11" id="mHz-Kq-xKd"/>
                 <outlet property="view" destination="8" id="V45-tF-zxy"/>
             </connections>
         </placeholder>
@@ -22,14 +23,12 @@
                 <navigationBar contentMode="scaleToFill" id="qBN-sD-CeZ">
                     <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <animations/>
                     <items>
                         <navigationItem title="文例" id="eJH-Xk-LN4">
                             <barButtonItem key="leftBarButtonItem" style="plain" id="IH1-bV-qtY">
                                 <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="H2J-iI-gnY">
                                     <rect key="frame" x="16" y="7" width="75" height="30"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <animations/>
                                     <state key="normal" title="キャンセル"/>
                                     <connections>
                                         <action selector="cancel:" destination="-1" eventType="touchUpInside" id="C4h-fM-xHd"/>
@@ -40,7 +39,6 @@
                                 <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="w0A-y2-qZ2">
                                     <rect key="frame" x="267" y="7" width="37" height="30"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <animations/>
                                     <state key="normal" title="編集"/>
                                     <connections>
                                         <action selector="toggleEdit:" destination="-1" eventType="touchUpInside" id="A3I-T7-evU"/>
@@ -53,10 +51,18 @@
                         <outlet property="delegate" destination="-1" id="SeG-dC-TLI"/>
                     </connections>
                 </navigationBar>
+                <searchBar contentMode="redraw" id="fug-7N-gtN">
+                    <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <textInputTraits key="textInputTraits"/>
+                    <scopeButtonTitles>
+                        <string>Title</string>
+                        <string>Title</string>
+                    </scopeButtonTitles>
+                </searchBar>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="11">
-                    <rect key="frame" x="0.0" y="66" width="320" height="394"/>
+                    <rect key="frame" x="0.0" y="110" width="320" height="350"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="16"/>
@@ -64,7 +70,6 @@
                     </connections>
                 </tableView>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
