--- a/LibMecabSample/TokensViewController.xib
+++ b/LibMecabSample/TokensViewController.xib
@@ -7,7 +7,6 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TokensViewController">
             <connections>
-                <outlet property="editButton" destination="c7k-Tz-adt" id="95k-3b-0u8"/>
                 <outlet property="myNavigationBar" destination="qBN-sD-CeZ" id="dfO-Vx-AJW"/>
                 <outlet property="myNavigationItem" destination="eJH-Xk-LN4" id="kkn-L3-Mc9"/>
                 <outlet property="searchBar" destination="fug-7N-gtN" id="zFT-ub-EWd"/>
@@ -24,28 +23,7 @@
                     <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <items>
-                        <navigationItem title="文例" id="eJH-Xk-LN4">
-                            <barButtonItem key="leftBarButtonItem" style="plain" id="IH1-bV-qtY">
-                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="H2J-iI-gnY">
-                                    <rect key="frame" x="16" y="7" width="75" height="30"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <state key="normal" title="キャンセル"/>
-                                    <connections>
-                                        <action selector="cancel:" destination="-1" eventType="touchUpInside" id="C4h-fM-xHd"/>
-                                    </connections>
-                                </button>
-                            </barButtonItem>
-                            <barButtonItem key="rightBarButtonItem" style="plain" id="c7k-Tz-adt">
-                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="w0A-y2-qZ2">
-                                    <rect key="frame" x="267" y="7" width="37" height="30"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <state key="normal" title="編集"/>
-                                    <connections>
-                                        <action selector="toggleEdit:" destination="-1" eventType="touchUpInside" id="A3I-T7-evU"/>
-                                    </connections>
-                                </button>
-                            </barButtonItem>
-                        </navigationItem>
+                        <navigationItem title="文例" id="eJH-Xk-LN4"/>
                     </items>
                     <connections>
                         <outlet property="delegate" destination="-1" id="SeG-dC-TLI"/>
