--- a/LibMecabSample/LibMecabSampleViewController.xib
+++ b/LibMecabSample/LibMecabSampleViewController.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
@@ -9,6 +8,7 @@
             <connections>
                 <outlet property="examples" destination="2mW-bO-ZIZ" id="T95-7m-baP"/>
                 <outlet property="explore" destination="9" id="JUc-qJ-Ce0"/>
+                <outlet property="optionTitle" destination="23g-z9-6A1" id="Vde-hq-6eC"/>
                 <outlet property="patch" destination="u1c-Jm-LgV" id="ask-X2-arm"/>
                 <outlet property="tableView" destination="11" id="kNP-dW-cGM"/>
                 <outlet property="textField" destination="10" id="14"/>
